--- a/assets/css/SRD.css
+++ b/assets/css/SRD.css
@@ -1236,7 +1236,7 @@ ul li .descr::before {
 
 @media (min-width: 40rem) {
   ul {
-    grid-template-columns: 1fr var(--line-w) 1fr;
+    grid-template-columns: 2fr var(--line-w) 1fr;
   }
   ul::before {
     grid-column: 2;
@@ -1305,6 +1305,7 @@ footer {
     color: #f2f2f2;
     margin-bottom: 8px;
     user-select: none;
+    margin-bottom: 20px;
   }
 }
 
@@ -1335,6 +1336,34 @@ footer {
   background-color: #0056b3;
 }
 
+.design {
+  margin-top: 10px;
+  padding: 10px;
+  border-left: 1px solid #f2f2f2;
+  border-right: 1px solid #f2f2f2;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+
+  h5 {
+    text-align: center;
+    font-size: 14px;
+    margin-top: 20px;
+    color: #f2f2f2;
+  }
+
+  img {
+    margin: 0 auto;
+    width: 30px;
+    margin-bottom: 10px;
+  }
+
+  .designSocialMedia {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
 /* Scroll to Top Button */
 
 /* HamburgerMenu */
@@ -2379,6 +2408,7 @@ footer {
   footer {
     display: flex;
     align-items: center;
+    justify-content: center;
     width: 100%;
     background-color: #006c8b;
     color: #f2f2f2;
